--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-qr-reader": "^2.2.1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
