--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "html2canvas": "^1.4.1",
+    "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.11",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
