--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.0",
     "react-qr-code": "^2.0.11",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^6.4.3",
