--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
     "react-table": "^7.8.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
