--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "html2canvas": "^1.4.1",
+    "modern-react-qr-reader": "^1.0.12",
     "nodemailer": "^6.8.0",
     "qrcode": "^1.5.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.0",
