--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
+    "react-share": "^4.4.1",
     "react-table": "^7.8.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
