--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-table": "^7.8.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "sharethis-reactjs": "^1.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
