--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-hook-form": "^7.41.0",
     "react-qr-code": "^2.0.11",
     "react-qr-reader": "^2.2.1",
