--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "qrcode": "^1.5.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-hook-form": "^7.41.0",
